# bravo5_cathode_protection

bravo_cathode_protection/: CMakeLists.txt  package.xml
bravo_cathode_protection/config/: bravo5_cp_compliance.json  bravo5_cp_compliance_WORKS_FINE.json  bravo5_cp_compliance_conservative.json  bravo5_cp_compliance_fast.json  bravo5_cp_compliance_fixed_axis.json  bravo5_cp_compliance_mobile_axis.json  test.json
bravo_cathode_protection/config/joint_friction_params/: joint_friction_bravo5.yaml
bravo_cathode_protection/config/program_params/: bravo5_cp_fixed_axis_runtime.json  bravo5_cp_mobile_axis_runtime.json  bravo5_cp_mobile_axis_switch_runtime.json
bravo_cathode_protection/config/stiff_control_params/: FAST_STRONG.json  FAST_WEAK.json  WEAK_LOW_STIFF.json  bravo5_cp_compliance_fixed_axis.json  bravo5_cp_compliance_fixed_axis.yaml
bravo_cathode_protection/docs/Bravo_torque_control/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
bravo_cathode_protection/include/bravo_cathode_protection/bravo_cpp/bravo_handler/: bravo_handler_v2.cpp  bravo_handler_v2.h
bravo_cathode_protection/include/bravo_cathode_protection/bravo_cpp/bravo_io_v2/: bplprotocol_unite.cpp  bplprotocol_unite.h  bravo_diagnosis.cpp  bravo_process_fdb.cpp  bravo_udp_v2.cpp  bravo_udp_v2.h  packetID.h
bravo_cathode_protection/include/bravo_cathode_protection/bravo_cpp/interaction/: stiffness_control_position.cpp  stiffness_control_position.h
bravo_cathode_protection/include/bravo_cathode_protection/bravo_cpp/joysticks/: airbus_joystick.cpp  airbus_joystick.h
bravo_cathode_protection/include/bravo_cathode_protection/bravo_cpp/utils/: bravo_dashboard.cpp  bravo_dashboard.h  bravo_logger.cpp  bravo_logger.h  utils.cpp  utils.h
bravo_cathode_protection/scripts/: friction.ipynb  view_bravo5_inertia_ellipsoid_subscriber.py  view_bravo5_manipulability_motion_force.ipynb
bravo_cathode_protection/src/: bravo5_cp_fixed_axis.cpp  bravo5_cp_fixed_axis_switch copy 2.cpp  bravo5_cp_fixed_axis_switch copy.cpp  bravo5_cp_fixed_axis_switch.cpp  bravo5_cp_fixed_axis_switch_prev.cpp  bravo5_cp_mobile_axis.cpp  bravo5_cp_mobile_axis_hybrid.cpp  bravo5_cp_mobile_axis_hybrid2.cpp  bravo5_cp_mobile_axis_switch copy.cpp  bravo5_cp_mobile_axis_switch.cpp  bravo5_gravity_and_joint_friction_identification.cpp  bravo5_gravity_and_joint_friction_identification_mount_rov.cpp
bravo_cathode_protection/src/demos_v2/: bravo5_cp_fixed_axis.cpp  bravo5_cp_fixed_axis_CLEAN.cpp  bravo5_cp_fixed_axis_switch.cpp  bravo5_cp_mobile_axis.cpp  bravo5_cp_mobile_axis_switch.cpp  bravo5_cp_whole_program_7.cpp  bravo5_diff_kinematics.cpp  bravo5_goTo_waypoints.cpp  bravo5_gravity_and_joint_friction_identification.cpp  bravo5_gravity_and_joint_friction_identification_mount_rov.cpp  task_stiffness_mobile_axis_control.cpp
bravo_cathode_protection/src/unittests/: bravo5_gravity_and_joint_friction_identification.cpp
bravo_cathode_protection/urdf/: bravo_5_dynamics_pinocchio_cp.urdf
bravo_compliance/: CMakeLists.txt  package.xml
bravo_compliance/config/: bravo5_cp_compliance _FAST_WEAK.json  bravo5_cp_compliance_FAST_STRONG.json  contact_maintenance_.json
bravo_compliance/launch/: cyberov_bravo7_underwater.launch.py
bravo_compliance/scripts/: check_packet_length.ipynb  joint_control_eth_keyboard.py  joint_control_torque_keyboard.py  keyboard_bravo_carlos_CURRENT.py  keyboard_bravo_unite.py  requesting_joint_positions_udp.py  udp_bravo7_current.py  udp_bravo7_interface_unite_stable_v1.py
bravo_compliance/scripts/identification/: bag_2_pickle_2.py  filter_data_ros2bag.ipynb  fourier_leg.ipynb
bravo_compliance/scripts/rov/: rov_stabilization.py  rov_twist.py
bravo_compliance/scripts/stiction_friction/: friction_analysis.ipynb  friction_analysis_stribeck.ipynb
bravo_compliance/scripts/torque_based_force_control/: VariousMotion&ForceControllers.ipynb  force_control_algorithm_2.ipynb  force_control_algorithms.ipynb  impedance_control.ipynb  stiffness_control.ipynb
bravo_compliance/scripts/urdf_dynamics/: urdf_bravo7_dynamics.ipynb
bravo_compliance/scripts/view_urdf/: 1  2  view_bravo5_manipulability_motion_force.ipynb  view_bravo7.ipynb  view_bravo7_manipulability.ipynb  view_bravo7_manipulability_motion_force.ipynb  view_cyberov_bravo7_reachability.ipynb  view_cyberov_store_configurations.ipynb
bravo_compliance/src/: conf_plotjuggler_to_test_jointpos_tracking.xml
bravo_compliance/src/demos/: bravo5_gravity_and_joint_friction.cpp  bravo7_gravity_and_joint_friction.cpp  bravo7_gravity_compensation.cpp  program_cp_improved.cpp  program_cp_improved_2.cpp  program_cp_underwater.cpp  task_stiffness_fixed_axis_control_compliant_Z.cpp  (+1 more)
general_libs_unite/: CMakeLists.txt  package.xml
general_libs_unite/include/general_libs_unite/collision/: bluevolta_bravo_collision.cpp  bluevolta_bravo_collision.h  collision_primitives.cpp  collision_primitives.h
general_libs_unite/include/general_libs_unite/general_utils/: general_utils.cpp  general_utils.h
general_libs_unite/include/general_libs_unite/interaction/: interaction_control.cpp  interaction_control.h  stiffness_control.cpp  stiffness_control.h  stiffness_control_position.cpp  stiffness_control_position.h
general_libs_unite/include/general_libs_unite/joysticks/: airbus_joystick.cpp  airbus_joystick.h
general_libs_unite/include/general_libs_unite/serial_manipulator/: diff_kinematics.cpp  diff_kinematics.h  kinodynamics_manipulator.cpp  kinodynamics_manipulator.h
general_libs_unite/include/general_libs_unite/whole_body_control/: null_space_projection.cpp  null_space_projection.h  vel_smoothing_filter.cpp  vel_smoothing_filter.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
robot_descriptions/: cp_custom_1.STL  cp_custom_2.STL  cp_custom_3.STL
robot_descriptions/bpl_bravo_description/: CMakeLists.txt
robot_descriptions/bravo_arm_description/: CMakeLists.txt  package.xml
robot_descriptions/example-robot-data/: CMakeLists.txt  package.xml
robot_descriptions/uvm_description/: CMakeLists.txt  package.xml
(+237 files in other folders)
